--- a/Chap02a.ipynb
+++ b/Chap02a.ipynb
@@ -414,7 +414,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "e8f5529d-f508-47d3-b5a4-8821bd66f394",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "// init 블럭에서 require 등의 내용은 책을 보며 스스로 학습"
