--- a/Chap02b.ipynb
+++ b/Chap02b.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "3ad48f93-3d76-4204-bdca-debdfd063f9f",
    "metadata": {
     "tags": []
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "b75bbf2c-ccc9-4037-a6c1-3f751d4ac629",
    "metadata": {
     "tags": []
@@ -293,10 +293,10 @@
     {
      "data": {
       "text/plain": [
-       "fun Line_30_jupyter.Person.toString(): kotlin.String"
+       "fun Line_9_jupyter.Person.toString(): kotlin.String"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "e9f00504-9118-407f-a38b-e42d59f8390f",
    "metadata": {
     "tags": []
@@ -316,10 +316,10 @@
     {
      "data": {
       "text/plain": [
-       "fun Line_30_jupyter.Person.equals(kotlin.Any?): kotlin.Boolean"
+       "fun Line_9_jupyter.Person.equals(kotlin.Any?): kotlin.Boolean"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "643c7b22-96b9-4d7b-a686-5b5346997aa7",
    "metadata": {
     "tags": []
@@ -339,10 +339,10 @@
     {
      "data": {
       "text/plain": [
-       "fun Line_30_jupyter.Person.hashCode(): kotlin.Int"
+       "fun Line_9_jupyter.Person.hashCode(): kotlin.Int"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "ade0a610-8cbd-456c-bbdd-8dfe9e8f189d",
    "metadata": {
     "tags": []
@@ -363,8 +363,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_34.jupyter.kts (1:1 - 13) The expression is unused\n",
-      "Line_34.jupyter.kts (1:9 - 13) Unresolved reference: copy"
+      "Line_13.jupyter.kts (1:1 - 13) The expression is unused\n",
+      "Line_13.jupyter.kts (1:9 - 13) Unresolved reference: copy"
      ]
     }
    ],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "81f6bd27-5c70-46ee-bdbf-5735ad79ef81",
    "metadata": {
     "tags": []
@@ -397,8 +397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line_41_jupyter$Person@cc5be7c\n",
-      "Line_41_jupyter$Person@cc5be7c\n"
+      "Line_14_jupyter$Person@64a0da38\n",
+      "Line_14_jupyter$Person@64a0da38\n"
      ]
     }
    ],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "dbc3d986-43cf-4ee9-996e-796e1291e420",
    "metadata": {
     "tags": []
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "id": "1eb78477-20df-460e-bec2-3e315608c25f",
    "metadata": {
     "tags": []
@@ -497,13 +497,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line_84_jupyter$Person@2db9be4f\n",
-      "767147599\n",
-      "2db9be4f\n",
+      "Line_16_jupyter$Person@636657b9\n",
+      "1667651513\n",
+      "636657b9\n",
       "===============\n",
-      "Line_84_jupyter$Person@2849b9e9\n",
-      "675920361\n",
-      "2849b9e9\n",
+      "Line_16_jupyter$Person@3a9930f7\n",
+      "983118071\n",
+      "3a9930f7\n",
       "===============\n",
       "false\n"
      ]
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "id": "9b460e74-8fee-4911-bf3e-b4aaec3f39d5",
    "metadata": {
     "tags": []
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "id": "6d457cf8-79ac-4b35-ac41-c9f412408131",
    "metadata": {
     "tags": []
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "id": "cdbc5af7-3f72-4959-b708-17acaa7aa0a2",
    "metadata": {
     "tags": []
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "id": "43a998fb-1b87-42f2-8139-6431bfafdcc1",
    "metadata": {
     "tags": []
@@ -671,7 +671,7 @@
    ],
    "source": [
     "class Person(var name: String, var age: Int, var height: Int) {\n",
-    "    // data class에서 copy()와 같이 동작하는 함수\n",
+    "    // data class에서의 copy()와 같이 동작하는 함수\n",
     "    fun copy() = Person(this.name, this.age, this.height)\n",
     "}\n",
     "\n",
@@ -694,7 +694,7 @@
    "metadata": {},
    "source": [
     "## Function overloading\n",
-    "TODO"
+    "스스로 학습"
    ]
   },
   {
