--- a/Chap02b.ipynb
+++ b/Chap02b.ipynb
@@ -16,7 +16,11 @@
    "metadata": {},
    "source": [
     "## Secondary constructor\n",
-    "부생성자"
+    "부생성자\n",
+    "\n",
+    "참고로 생성자는 리턴 타입에 대해 생각할 필요가 없다.\n",
+    "\n",
+    "객체가 만들어지며 속성 초기화 등 수행해야 할 일을 하는 특수한 함수다."
    ]
   },
   {
@@ -39,7 +43,7 @@
     "        this.height = 0 // 주생성자에서는 키는 그냥 0으로 초기화\n",
     "    }\n",
     "    \n",
-    "    // 부생성자에서는 키까지\n",
+    "    // 부생성자에서는 키까지 설정\n",
     "    constructor(name: String, age: Int, height: Int): this(name, age) {\n",
     "        this.height = height\n",
     "    }\n",
@@ -77,7 +81,7 @@
    "metadata": {},
    "source": [
     "## Constructor overloading\n",
-    "`this`의 또 다른 용도는 생성자 호출\n",
+    "앞에서도 살펴보았지만 `this`의 또 다른 용도는 생성자 호출\n",
     "\n",
     "오버로딩된 생성자에서 다른 생성자를 호출하는 경우에만 가능 (생성자가 아닌 다른 보통 함수에서는 이런 용도로 활용 불가)\n",
     "\n",
@@ -397,8 +401,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line_14_jupyter$Person@64a0da38\n",
-      "Line_14_jupyter$Person@64a0da38\n"
+      "Line_14_jupyter$Person@1b454dc6\n",
+      "Line_14_jupyter$Person@1b454dc6\n"
      ]
     }
    ],
@@ -497,13 +501,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line_16_jupyter$Person@636657b9\n",
-      "1667651513\n",
-      "636657b9\n",
+      "Line_16_jupyter$Person@6d00896\n",
+      "114296982\n",
+      "6d00896\n",
       "===============\n",
-      "Line_16_jupyter$Person@3a9930f7\n",
-      "983118071\n",
-      "3a9930f7\n",
+      "Line_16_jupyter$Person@14e632f0\n",
+      "350630640\n",
+      "14e632f0\n",
       "===============\n",
       "false\n"
      ]
