--- a/Chap03a.ipynb
+++ b/Chap03a.ipynb
@@ -17,13 +17,24 @@
     "\n",
     "물론 저 용어 각각의 의미가 무엇인지 어떤 개념인지 알고 활용할 줄 알면 그게 진짜 실력에 도움이 되고 좋겠죠\n",
     "\n",
-    "문제는 이 책은 코틀린이라는 언어를 간단히 알아보기에는 좋은 점이 있는 책이지만, 저 네 개의 개념을 설명을 잘 하지는 못하고 있다는 점입니다. 왜 저런 개념이 나왔는지 핵심적인 설명보다는 코틀린 언어의 기능적 요소에 저 개념을 하나씩 끼워맞추려다 보니까 이상하게 설명이 전개되는 부분들이 있습니다. 상속과 다형성에 대해서는 뭐 크게 잘못된 설명이 나올 여지가 별로 없고, 문제는 캡슐화와 추상화와 관련된 개념에 대한 설명이 좀 그렇습니다.\n",
-    "\n",
-    "encapsulation의 정의 자체는 잘 설명했는데 관련 내용을 나열하는 데 있어서 뭐 완전히 틀렸다고는 할 수 없지만 좀 논의가 필요한 부분들이 있어서\n",
+    "문제는 이 책은 코틀린이라는 언어를 간단히 알아보기에는 좋은 점이 있는 책이지만, 저 네 개의 개념을 설명을 잘 하지는 못하고 있다는 점입니다. 왜 저런 개념이 나왔는지 핵심적인 설명보다는 코틀린 언어의 기능적 요소에 저 개념을 하나씩 끼워맞추려다 보니까 이상하게 설명이 전개되는 부분들이 있습니다. 상속과 다형성에 대해서는 뭐 크게 잘못된 설명이 나올 여지가 별로 없고, 문제는 캡슐화와 추상화와 관련된 개념에 대한 설명이 좀 그렇습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1285e9e3-4b11-4099-99e1-2da2c9bceb6f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "encapsulation의 정의 자체는 잘 설명했는데 관련 개념을 설명하는 데 있어서 논의가 필요한 부분들이 있어서\n",
     "\n",
     "abstraction과 가장 밀접한 내용이 implementation hiding인데, 책에서는 implementation hiding을 encapsulation과 관련이 많은 개념으로 이쪽에 설명하려 하고 있음 (그런데, 이런 식의 설명이 이 책에만 있는 게 아니라서 ...)\n",
     "\n",
-    "이 주제와 관려내서 다음 블로그 글에서 인용하는\n",
+    "abstraction은 자료구조에서 추상 데이터 타입(abstract data type 줄여서 ADT)라는 개념이 왜 나오는지 설명을 찾아보라\n",
+    "\n",
+    "\n",
+    "encapsulation과 information hiding과 관련해서는서 다음 블로그 글에서 인용하는\n",
     "https://justhackem.wordpress.com/2017/02/28/encapsulation-and-information-hiding/\n",
     "이 개발 관련 웹진 기사\n",
     "https://www.infoworld.com/article/2075271/encapsulation-is-not-information-hiding.html\n",
@@ -41,6 +52,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bdd5959-590d-4ffc-a08e-55e214b62a8b",
+   "metadata": {},
+   "source": [
+    "## What is inheritance\n",
+    "\n",
+    "계층적 구조로 클래스를 선언하면 상위 클래스의 구현(즉, 상위 클래스에 작성된 코드)를 하위 클래스들에 자동으로 공유되는 방식을 클래스 상속(inheritance)이라고 함\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53abeac8-1c62-40f1-9043-b6eaba6394bc",
    "metadata": {},
    "source": [
@@ -51,12 +73,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1176069-6ac8-4d21-b1fa-9486a43e1247",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 클래스 상속에 적합한 경우\n",
+    "\n",
+    "1. 공통되는 속성과 동작\n",
+    "2. 분명한 **is-a** 관계\n",
+    "   - Student is a Person\n",
+    "   - Professor is a Person\n",
+    "   - Employee is a Person\n",
+    "   \n",
+    "이럴 때, \n",
+    "- 공통적 속성과 동작을 포함하는 Person이라는 클래스를 선언하고\n",
+    "- Student, Professor, Employee는 Person이라는 상위 클래스(superclass)를 상속하는 하위 클래스(subclass)로 선언\n",
+    "\n",
+    "상위/하위 클래스(super/sub- class) 대신에 부모/자녀 클래스(parent/child class)라는 표현을 쓰기도 함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cec49b9f-a6d5-4f0c-9a1e-5749cbabd410",
+   "metadata": {},
+   "source": [
+    "### 클래스 상속에 적합하지 않은 경우\n",
+    "\n",
+    "대표적으로 **is-a** 관계가 아닌 **has-a** 관계\n",
+    "\n",
+    "- Car has an Engine\n",
+    "- Chainsaw has an Engine\n",
+    "\n",
+    "자동차와 체인톱은 모두 엔진으로 돌아간다는 공통점이 있지만\n",
+    "- 자동차는 엔진이 아니고 탈것\n",
+    "- 체인톱은 엔진이 아니고 공구\n",
+    "\n",
+    "그러니까 Engine을 Car와 Chainsaw가 Engine을 상속하도록 하는 것은 잘못된 설계"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df8e73c8-cf23-4475-b74d-e1fcd1b48acf",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Using the `open` keyword\n",
+    "코틀린에서는 기본적으로 클래스를 선언하면 그로부터 상속을 막아놓음\n",
+    "\n",
+    "`open`이라는 키워드로 선언한 클래스로부터는 상속 가능\n",
+    "\n",
+    "즉, 코틀린에서는 클래스가 기본적으로는 `open`이 아님\n",
+    "\n",
+    "참고로, 자바는 반대로 클래스로는 기본적으로 상속을 허용하고 `final`이라는 키워드로 선언한 클래스의 상속을 막음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6a430b0d-a853-4517-b71e-70e85966a4be",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_5.jupyter.kts (3:16 - 22) This type is final, so it cannot be inherited from\n",
+      "Line_5.jupyter.kts (5:18 - 24) This type is final, so it cannot be inherited from\n",
+      "Line_5.jupyter.kts (7:17 - 23) This type is final, so it cannot be inherited from"
+     ]
+    }
+   ],
+   "source": [
+    "/* open */ class Person // open 의 주석을 해제해 보라\n",
+    "\n",
+    "class Student: Person()\n",
+    "\n",
+    "class Professor: Person()\n",
+    "\n",
+    "class Employee: Person()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "639e6b22-2108-4467-808a-a1d58e2309a9",
+   "metadata": {},
+   "source": [
+    "## Using the `super` keyword\n",
+    "`this`의 용도 중 하나가 오버로딩된 생성자에서 다른 생성자를 호출하는 것인데\n",
+    "\n",
+    "이와 비슷하게 상속 계층구조에서 부모 클래스의 생성자를 호출하는 용도로 `super`라는 키워드 활용"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a430b0d-a853-4517-b71e-70e85966a4be",
+   "id": "1f32d494-f3c0-4b67-b833-a15237405de4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "// TODO"
+   ]
   }
  ],
  "metadata": {
