--- a/Chap03a.ipynb
+++ b/Chap03a.ipynb
@@ -45,9 +45,13 @@
     "    \n",
     "    캡슐화는 해당 데이터에서 작동하는 메서드와 데이터를 묶는 것을 말합니다.\n",
     "\n",
-    "캡슐화의 정의 혹은 핵심 개념은 이것에 집중해야 하고 다른 것들(뭘 숨기고 제한하고 하는 기능 등)은 보조적 역할이다라는 것을 강조합니다.\n",
+    "캡슐화의 정의 혹은 핵심 개념은 이것으로 이해해야 하고 다른 것들(뭘 숨기고 제한하고 하는 기능 등)은 별도의 개념으로 캡슐화와 관련성이 있는 것으로 설명한다.\n",
     "\n",
-    "캡슐화를 하려다 보면 특정 상황에서 특정 언어에서 제공하는 방식에 따라서 정보은닉(information hiding)이 유용한 경우도 있다. 그러니까 좋은 캡슐화라는 목적을 이루기 위한 여러가지 방법 중에 상당수의 경우에 효과적인 방법의 하나라거나 혹은 다양한 종류의 개념에 대해 캡슐화를 잘 하려다 보면 유용하게 활용할 수 있는 요소/기능 정도로 이해하면 좋겠습니다."
+    "캡슐화를 하려다 보면 특정 상황에서 특정 언어에서 제공하는 방식에 따라서 정보은닉(information hiding)이 유용한 경우도 있다. 그러니까 좋은 캡슐화라는 목적을 이루기 위한 여러가지 방법 중에 상당수의 경우에 효과적인 방법의 하나라거나 혹은 캡슐화된 코드를 더 관리하기 좋게 도와주는 유용한 방식/기능 정도로 이해하면 좋겠습니다.\n",
+    "\n",
+    "그러니까 정리하면\n",
+    "- 내가 잘 감싸서 하나로 묶어놓는 것이 캡슐화\n",
+    "- 내가 아무리 잘 감싸놨어도 (내일의 나를 포함한) 남들이 그렇게 묶어놓은 의도를 무시하고 다시 풀어헤쳐서 헤집어 놓으며 사용하지 말라는 보장이 없는데, 이 의도를 존중하도록 강제하는 것을 도와주자는 취지에서 정보은닉(information hiding)을 하자는 것"
    ]
   },
   {
@@ -91,14 +95,8 @@
     "- 공통적 속성과 동작을 포함하는 Person이라는 클래스를 선언하고\n",
     "- Student, Professor, Employee는 Person이라는 상위 클래스(superclass)를 상속하는 하위 클래스(subclass)로 선언\n",
     "\n",
-    "상위/하위 클래스(super/sub- class) 대신에 부모/자녀 클래스(parent/child class)라는 표현을 쓰기도 함"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cec49b9f-a6d5-4f0c-9a1e-5749cbabd410",
-   "metadata": {},
-   "source": [
+    "상위/하위 클래스(super/sub- class) 대신에 부모/자녀 클래스(parent/child class)라는 표현을 쓰기도 함\n",
+    "\n",
     "### 클래스 상속에 적합하지 않은 경우\n",
     "\n",
     "대표적으로 **is-a** 관계가 아닌 **has-a** 관계\n",
@@ -110,7 +108,11 @@
     "- 자동차는 엔진이 아니고 탈것\n",
     "- 체인톱은 엔진이 아니고 공구\n",
     "\n",
-    "그러니까 Engine을 Car와 Chainsaw가 Engine을 상속하도록 하는 것은 잘못된 설계"
+    "그러니까 Engine을 Car와 Chainsaw가 Engine을 상속하도록 하는 것은 잘못된 설계\n",
+    "\n",
+    "\n",
+    "나중에 **is-a** 관계나 **has-a** 관계에 대해서는 책에 나중에 나오는데\n",
+    "여기 상속 부분이 관련된 부분이라 미리 한번 살펴봄"
    ]
   },
   {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6a430b0d-a853-4517-b71e-70e85966a4be",
    "metadata": {
     "tags": []
@@ -142,9 +144,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_5.jupyter.kts (3:16 - 22) This type is final, so it cannot be inherited from\n",
-      "Line_5.jupyter.kts (5:18 - 24) This type is final, so it cannot be inherited from\n",
-      "Line_5.jupyter.kts (7:17 - 23) This type is final, so it cannot be inherited from"
+      "Line_0.jupyter.kts (3:16 - 22) This type is final, so it cannot be inherited from\n",
+      "Line_0.jupyter.kts (5:18 - 24) This type is final, so it cannot be inherited from\n",
+      "Line_0.jupyter.kts (7:17 - 23) This type is final, so it cannot be inherited from"
      ]
     }
    ],
@@ -171,13 +173,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f32d494-f3c0-4b67-b833-a15237405de4",
+   "execution_count": 2,
+   "id": "d4772609-072f-4b66-9766-a725ab9a7d9b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "open class Person(val name: String, val id: Int)\n",
+    "\n",
+    "// 주생성자는 상위클래스 생성자를 클래스 이름으로 호출\n",
+    "class Student(name: String, id: Int,\n",
+    "              var enrolled: Boolean,\n",
+    "              var year: Int\n",
+    "             ): Person(name, id)\n",
+    "\n",
+    "\n",
+    "// class Professor(name: String, id: Int, ...): Person(name, id)\n",
+    "\n",
+    "// class Employee(name: String, id: Int, ...): Person(name, id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de589851-5fbf-45a1-9f98-66315665b5be",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "open class Person(val name: String, val id: Int)\n",
+    "\n",
+    "class Student: Person {\n",
+    "    var enrolled: Boolean\n",
+    "    var year: Int\n",
+    "    // 부생성자는 상위클래스 생성자를 this 키워드로 호출\n",
+    "    constructor (name: String, id: Int,\n",
+    "                 enrolled: Boolean,\n",
+    "                 year: Int\n",
+    "                ): super(name, id) {\n",
+    "        this.enrolled = enrolled\n",
+    "        this.year = year\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// class Professor(name: String, id: Int, ...): Person(name, id)\n",
+    "\n",
+    "// class Employee(name: String, id: Int, ...): Person(name, id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "78e32e97-76bf-4c86-a62c-c4b43b90449e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "// TODO"
+    "open class Person(val name: String, val id: Int)\n",
+    "\n",
+    "class Student: Person {\n",
+    "    var enrolled: Boolean\n",
+    "    var year: Int\n",
+    "    // 부생성자는 상위클래스 생성자를 super 키워드로 호출\n",
+    "    constructor (name: String, id: Int,\n",
+    "                 enrolled: Boolean,\n",
+    "                 year: Int\n",
+    "                ): super(name, id) {\n",
+    "        this.enrolled = enrolled\n",
+    "        this.year = year\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// class Professor(name: String, id: Int, ...): Person(name, id)\n",
+    "\n",
+    "// class Employee(name: String, id: Int, ...): Person(name, id)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d134f89a-8dbf-47de-811d-fcbcf3e5c072",
+   "metadata": {},
+   "source": [
+    "## Class-initialization hierarchy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "186a86b6-e01b-40a4-8bfe-39d9b06eb9a8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "open class A {\n",
+    "    init { println(\"class A init\") }\n",
+    "}\n",
+    "\n",
+    "open class B: A() {\n",
+    "    init { println(\"class B init\") }\n",
+    "}\n",
+    "\n",
+    "open class C: B() {\n",
+    "    init { println(\"class C init\") }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9de83182-fef7-4204-9c3a-dea2c3fe3b60",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class A init\n"
+     ]
+    }
+   ],
+   "source": [
+    "val a = A()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ba341e8a-049f-4094-aa99-07097bc0ca17",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class A init\n",
+      "class B init\n"
+     ]
+    }
+   ],
+   "source": [
+    "val b = B()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f2066357-69b0-4ecc-b053-84225f4df76e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class A init\n",
+      "class B init\n",
+      "class C init\n"
+     ]
+    }
+   ],
+   "source": [
+    "val c = C()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49a6b5bf-63ea-4eea-b790-7823292ad474",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
